add option file

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -19,5 +19,6 @@ apply plugin: 'kotlin-android'
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'junit:junit:4.12'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
