migrate evlib to its own module

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'kotlin-android'
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation project(':Evlib')
     implementation 'junit:junit:4.12'
-    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
