--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'kotlin-android'
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation project(':Evlib')
+//    implementation project(':Evlib')
     implementation 'junit:junit:4.12'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
