turned the entire directory into an evlib project

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ include ':FtcRobotController'
 include ':TeamCode'
 
 // evlib projects
-include 'Evlib'
-project(':Evlib').projectDir = file('Evlib/Evlib')
+include ':Evlib'
+include ':Evlib:Evlib'
+include ':Evlib:EvAnnotations'
