--- a/EvSymbolProcessor/build.gradle
+++ b/EvSymbolProcessor/build.gradle
@@ -4,16 +4,16 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
-
+    compileSdkVersion 29
+//
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 28
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
-
+//
     buildTypes {
         release {
             minifyEnabled false
@@ -21,17 +21,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+
+//    kotlinOptions {
+//        jvmTarget = '1.8'
+//    }
 }
 
-apply from: '../build.dependencies.gradle'
 
 dependencies {
     implementation project(':Evlib:EvAnnotations')
-    implementation 'com.google.devtools.ksp:symbol-processing-api:1.5.30-1.0.0'
+    implementation 'com.google.devtools.ksp:symbol-processing-api:1.6.10-1.0.4'
 }
