--- a/Evlib/build.gradle
+++ b/Evlib/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'com.google.devtools.ksp' version '1.6.10-1.0.4'
     id 'kotlin-android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
 }
 
 android {
@@ -34,6 +35,6 @@ apply from: '../build.dependencies.gradle'
 
 dependencies {
     implementation project(':Evlib:EvAnnotations')
-    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
     ksp project(':Evlib:EvSymbolProcessor')
 }
