--- a/Evlib/Evlib/build.gradle
+++ b/Evlib/Evlib/build.gradle
@@ -21,8 +21,9 @@ android {
             minifyEnabled true
         }
     }
-    sourceSets.main {
-        java.srcDirs += 'build/generated/ksp/debug/kotlin'
+
+    lintOptions {
+        abortOnError false
     }
 
     compileOptions {
