--- a/Evlib/Evlib/build.gradle
+++ b/Evlib/Evlib/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.google.devtools.ksp' version '1.6.10-1.0.4'
     id 'kotlin-android'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
+    id 'idea'
 }
 
 android {
@@ -29,6 +30,12 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+}
+
+idea {
+    module {
+        sourceDirs = sourceDirs + file('build/generated/ksp/debug/kotlin')
     }
 }
 
