--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,15 @@ configurations {
 }
 
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.6.21'
     repositories {
         mavenCentral()
         google()
+        //noinspection JcenterRepositoryObsolete
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -27,6 +28,7 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        //noinspection JcenterRepositoryObsolete
         jcenter()
     }
 }
@@ -40,11 +42,11 @@ repositories {
 }
 
 dependencies {
-    doc 'org.firstinspires.ftc:Hardware:6.2.0'
-    doc 'org.firstinspires.ftc:RobotCore:6.2.0'
-    doc 'org.firstinspires.ftc:FtcCommon:6.2.0'
-    doc 'org.firstinspires.ftc:OnBotJava:6.2.0'
-    doc 'org.firstinspires.ftc:Inspection:6.2.0'
+    doc 'org.firstinspires.ftc:Hardware:7.1.0'
+    doc 'org.firstinspires.ftc:RobotCore:7.1.0'
+    doc 'org.firstinspires.ftc:FtcCommon:7.1.0'
+    doc 'org.firstinspires.ftc:OnBotJava:7.1.0'
+    doc 'org.firstinspires.ftc:Inspection:7.1.0'
 }
 
 task extractJavadoc {
