--- a/Evlib/Evlib/build.gradle
+++ b/Evlib/Evlib/build.gradle
@@ -39,10 +39,25 @@ idea {
     }
 }
 
-apply from: '../build.dependencies.gradle'
+repositories {
+    mavenCentral()
+    google() // Needed for androidx
+    flatDir {
+        dirs rootProject.file('libs')
+    }
+}
 
 dependencies {
-    api project(':Evlib:EvAnnotations')
+    implementation 'org.firstinspires.ftc:RobotCore:7.1.0'
+    implementation 'org.firstinspires.ftc:RobotServer:7.1.0'
+    implementation 'org.firstinspires.ftc:Hardware:7.1.0'
+    implementation 'org.firstinspires.ftc:FtcCommon:7.1.0'
+
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+
+    api project(':Evlib:EvAnnotations')
     ksp project(':Evlib:EvSymbolProcessor')
+
+    // cannot disable inspection, but this version is required for compatibility with ftc
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 }
