--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# cannot compile release builds without this
+# (memory for compile set to at minimum 1GB and at max 2GB)
+org.gradle.jvmargs=-Xms1024m -Xmx2048m
