--- a/Evlib/Evlib/build.gradle
+++ b/Evlib/Evlib/build.gradle
@@ -58,6 +58,6 @@ dependencies {
     api project(':Evlib:EvAnnotations')
     ksp project(':Evlib:EvSymbolProcessor')
 
-    // cannot disable inspection, but this version is required for compatibility with ftc
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    //noinspection GradleDependency
+    implementation 'androidx.appcompat:appcompat:1.2.0' // this version is required for compatibility with ftc
 }
