--- a/Evlib/EvSymbolProcessor/build.gradle
+++ b/Evlib/EvSymbolProcessor/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     implementation project(':Evlib:EvAnnotations')
     implementation 'com.google.devtools.ksp:symbol-processing-api:1.6.21-1.0.5'
     implementation 'com.squareup:kotlinpoet:1.11.0'
+    implementation 'com.squareup:kotlinpoet-ksp:1.11.0'
 }
