--- a/Evlib/Evlib/build.gradle
+++ b/Evlib/Evlib/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
     id 'idea'
+    id 'com.github.willir.rust.cargo-ndk-android'
 }
 
 android {
@@ -41,6 +42,12 @@ idea {
 
 repositories {
     mavenCentral()
+}
+
+cargoNdk {
+    // REV Robotics hardware runs on arm, but TODO need to find whether 32 or 64 bit
+    targets = ['arm64', 'arm']
+    module = 'Evlib/Evlib/src/native'
 }
 
 dependencies {
