--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ configurations {
 buildscript {
     ext.kotlin_version = '1.6.21'
     repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         mavenCentral()
         google()
         //noinspection JcenterRepositoryObsolete
@@ -19,6 +22,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "gradle.plugin.com.github.willir.rust:plugin:0.3.4"
     }
 }
 
