--- a/Evlib/Evlib/build.gradle
+++ b/Evlib/Evlib/build.gradle
@@ -15,7 +15,7 @@ android {
         //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
         versionCode 0
-        versionName "0.1.0"
+        versionName '0.1.0'
     }
 
     buildTypes {
@@ -48,14 +48,14 @@ cargoNdk {
     // REV Robotics hardware runs on arm, but TODO need to find whether 32 or 64 bit
     targets = ['arm64', 'arm']
     module = 'Evlib/Evlib/src/native'
-    extraCargoBuildArguments = ["-Zbuild-std"]
+    extraCargoBuildArguments = ['-Zbuild-std']
 }
 
 dependencies {
     implementation 'org.firstinspires.ftc:RobotCore:7.1.0'
     implementation 'org.firstinspires.ftc:Hardware:7.1.0'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 
     api project(':Evlib:EvAnnotations')
     ksp project(':Evlib:EvSymbolProcessor')
