--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,9 @@ configurations {
 }
 
 buildscript {
-    ext.kotlin_version = '1.6.21'
     repositories {
         maven {
-            url "https://plugins.gradle.org/m2/"
+            url 'https://plugins.gradle.org/m2/'
         }
         mavenCentral()
         google()
@@ -21,8 +20,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "gradle.plugin.com.github.willir.rust:plugin:0.3.4"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
+        classpath 'gradle.plugin.com.github.willir.rust:plugin:0.3.4'
     }
 }
 
