--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
         classpath 'gradle.plugin.com.github.willir.rust:plugin:0.3.4'
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.7.0'
     }
 }
 
