--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -10,13 +10,8 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
-              with:
-                ref: master
 
-            - name: Run dokka
-              uses: jojo243/android-gradle-action@2.1.3
-              with:
-                script: Evlib:Evlib:dokkaHtml
+            - run: ./gradlew Evlib:Evlib:dokkaHtml
 
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
