--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -11,11 +11,11 @@ jobs:
         steps:
             - uses: actions/checkout@v2
 
+            - name: Run Gradle doc task
             - run: ./gradlew Evlib:Evlib:dokkaHtml
 
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
-              if: ${{ github.ref == 'refs/heads/main' }}
               with:
                 github_token: ${{ secrets.GITHUB_TOKEN }}
                 publish_dir: ./Evlib/Evlib/build/dokka
